--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <!-- Mirrored from www.fineartnori.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Dec 2025 14:39:14 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4F9LQ7JT3J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4F9LQ7JT3J');
+</script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- This is Squarespace. --><!-- tunny-sepia-sege -->
