Remove annoying cart

--- a/index.html
+++ b/index.html
@@ -4276,7 +4276,7 @@
             opacity: 0;
           
         }
-      
+      .cart-checkout, .header-actions-action--cart, .sqs-cart-wrapper { display: none !important; }
     </style>
   
 
