Attempt 2 cart removal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 <link rel="preconnect" href="../p.typekit.net/index.html" crossorigin>
 <script type="text/javascript" src="../use.typekit.net/ik/TL9msad0Mo-q-BAlYe46KagvJlY_c4MWrG8IDPhcMj9fe7SIfFHN4UJLFRbh52jhWDjUjhBqjDi8jhmRZQ8cFeIawQwDZA9owy7wMkG0jAFu-WsoShFGZAsude80ZkoRdhXCHKoyjamTiY8Djhy8ZYmC-Ao1Oco8if37OcBDOcu8OfG0SaBujW48SagyjhmDjhy8ZYmC-A" async fetchpriority="high" onload="try{Typekit.load();}catch(e){} document.documentElement.classList.remove('wf-loading');"></script>
 <script>document.documentElement.classList.add('wf-loading')</script>
-<style>@keyframes fonts-loading { 0%, 99% { color: transparent; } } html.wf-loading * { animation: fonts-loading 3s; }</style>
+<style> #siteWrapper #header .header-actions-action--cart, 
+.sqs-cart-wrapper, 
+.header-cart, 
+[data-test="cart-button-container"] { 
+    display: none !important; 
+    visibility: hidden !important; 
+    opacity: 0 !important;
+} 
+  @keyframes fonts-loading { 0%, 99% { color: transparent; } } html.wf-loading * { animation: fonts-loading 3s; }</style>
 <script type="text/javascript" crossorigin="anonymous" defer="true" nomodule="nomodule" src="../assets.squarespace.com/%40sqs/polyfiller/1.6/legacy.js"></script>
 <script type="text/javascript" crossorigin="anonymous" defer="true" src="../assets.squarespace.com/%40sqs/polyfiller/1.6/modern.js"></script>
 <script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
@@ -4276,7 +4284,7 @@
             opacity: 0;
           
         }
-      .cart-checkout, .header-actions-action--cart, .sqs-cart-wrapper { display: none !important; }
+
     </style>
   
 
