--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
-<style>#floatingCart, .floating-cart { display: none !important; }</style>
 <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US"  >
   
 <!-- Mirrored from www.fineartnori.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 20 Dec 2025 14:39:14 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
+  <style>
+  /* This is now the very first thing the browser reads inside the head */
+  #floatingCart, .floating-cart, .sqs-custom-cart, .icon--cart { 
+    display: none !important; 
+    visibility: hidden !important; 
+    opacity: 0 !important;
+  }
+</style>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4F9LQ7JT3J"></script>
 <script>
