--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 &quot;value&quot;: 1.0
 }
 },
-&quot;menuOverlayAnimation&quot;: &quot;fade&quot;,
+&quot;menuOverlayAnimation&quot;: &none;fade&quot;,
 &quot;cartStyle&quot;: &quot;cart&quot;,
 &quot;cartText&quot;: &quot;Cart&quot;,
 &quot;showEmptyCartState&quot;: true,
