--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
 }
 },
 &quot;menuOverlayAnimation&quot;: &quot;fade&quot;,
-&quot;cartStyle&quot;: &quot;cart&quot;,
+&quot;cartStyle&quot;: &quot;none&quot;,
 &quot;cartText&quot;: &quot;Cart&quot;,
 &quot;showEmptyCartState&quot;: true,
 &quot;cartOptions&quot;: {
