--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 &quot;value&quot;: 1.0
 }
 },
-&quot;showButton&quot;: true,
+&quot;showButton&quot;: false,
 &quot;showCart&quot;: false,
 &quot;showAccountLogin&quot;: true,
 &quot;headerStyle&quot;: &quot;theme&quot;,
@@ -827,7 +827,7 @@
 &quot;value&quot;: 1.0
 }
 },
-&quot;showButton&quot;: true,
+&quot;showButton&quot;: false,
 &quot;showCart&quot;: false,
 &quot;showAccountLogin&quot;: true,
 &quot;headerStyle&quot;: &quot;theme&quot;,
